section wrap fix

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -795,7 +795,7 @@ a.tooltip
   background: #FBFBFB
   border-left: 1px solid $primary_border4
   border-right: 1px solid $primary_border4
-  padding: 10px 20px 15px
+  padding: 10px 18px 15px
   position: relative
   +border-bottom-radius(0)
   +pie-clearfix
